--- a/Experiments-iOS-OpenGL/Base.lproj/Main.storyboard
+++ b/Experiments-iOS-OpenGL/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4I1-XZ-5WW" customClass="OpenGLView" customModule="Experiments_iOS_OpenGL" customModuleProvider="target">
-                                <rect key="frame" x="16" y="20" width="343" height="647"/>
+                                <rect key="frame" x="16" y="20" width="343" height="637"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
@@ -31,7 +31,7 @@
                         <constraints>
                             <constraint firstItem="4I1-XZ-5WW" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="9Wk-Fm-kmA"/>
                             <constraint firstItem="4I1-XZ-5WW" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="fKs-ML-uVZ"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="4I1-XZ-5WW" secondAttribute="bottom" id="t45-gg-iyJ"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="4I1-XZ-5WW" secondAttribute="bottom" constant="10" id="t45-gg-iyJ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="4I1-XZ-5WW" secondAttribute="trailing" id="ub4-0s-WdC"/>
                         </constraints>
                     </view>
